// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/users/Avatars should properly count overflow 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
      "4",
      "5",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
    onMouseLeave={[Function]}
  >
    <UserAvatar
      key="1"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="1"
    >
      <SimpleTooltip
        animation={true}
        content="first.last1"
        id="name-first.last1"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last1"
              placement="top"
            >
              first.last1
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last1"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last1
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/1/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/1/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
    <UserAvatar
      key="2"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="2"
    >
      <SimpleTooltip
        animation={true}
        content="first.last2"
        id="name-first.last2"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last2"
              placement="top"
            >
              first.last2
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last2"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last2
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/2/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/2/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
    <UserAvatar
      key="3"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="3"
    >
      <SimpleTooltip
        animation={true}
        content="first.last3"
        id="name-first.last3"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last3"
              placement="top"
            >
              first.last3
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last3"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last3
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/3/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/3/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
    <SimpleTooltip
      animation={true}
      content="first.last1, first.last2, first.last3, first.last4, first.last5"
      id="names-overflow"
      onEntered={[Function]}
    >
      <OverlayTrigger
        animation={true}
        defaultOverlayShown={false}
        delayShow={500}
        onEntered={[Function]}
        overlay={
          <Tooltip
            bsClass="tooltip"
            className="hidden-xs"
            id="names-overflow"
            placement="top"
          >
            first.last1, first.last2, first.last3, first.last4, first.last5
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <OverlayWrapper
              bsClass="tooltip"
              className="hidden-xs"
              id="names-overflow"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatDateToParts": [Function],
                  "formatDisplayName": [Function],
                  "formatList": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatNumberToParts": [Function],
                  "formatPlural": [Function],
                  "formatRelativeTime": [Function],
                  "formatTime": [Function],
                  "formatTimeToParts": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getDisplayNames": [Function],
                    "getListFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralRules": [Function],
                    "getRelativeTimeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": Object {},
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": "Etc/UTC",
                  "wrapRichTextChunksInFragment": undefined,
                }
              }
              placement="top"
            >
              first.last1, first.last2, first.last3, first.last4, first.last5
            </OverlayWrapper>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <Memo(Avatar)
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            size="xl"
            tabIndex={0}
            text="+2"
          >
            <div
              className="Avatar Avatar-xl Avatar-plain"
              data-content="+2"
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "background": "rgb(239, 239, 240)",
                }
              }
              tabIndex={0}
            />
          </Memo(Avatar)>
        </OverlayTrigger>
      </OverlayTrigger>
    </SimpleTooltip>
  </div>
</Memo(Avatars)>
`;

exports[`components/widgets/users/Avatars should support userIds 1`] = `
<Memo(Avatars)
  size="xl"
  userIds={
    Array [
      "1",
      "2",
      "3",
    ]
  }
>
  <div
    className="Avatars Avatars___xl"
    onMouseLeave={[Function]}
  >
    <UserAvatar
      key="1"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="1"
    >
      <SimpleTooltip
        animation={true}
        content="first.last1"
        id="name-first.last1"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last1"
              placement="top"
            >
              first.last1
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last1"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last1
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/1/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/1/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
    <UserAvatar
      key="2"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="2"
    >
      <SimpleTooltip
        animation={true}
        content="first.last2"
        id="name-first.last2"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last2"
              placement="top"
            >
              first.last2
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last2"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last2
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/2/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/2/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
    <UserAvatar
      key="3"
      overlayProps={
        Object {
          "animation": true,
          "delayShow": undefined,
          "onEntered": [Function],
        }
      }
      size="xl"
      tabIndex={0}
      userId="3"
    >
      <SimpleTooltip
        animation={true}
        content="first.last3"
        id="name-first.last3"
        onEntered={[Function]}
      >
        <OverlayTrigger
          animation={true}
          defaultOverlayShown={false}
          delayShow={500}
          onEntered={[Function]}
          overlay={
            <Tooltip
              bsClass="tooltip"
              className="hidden-xs"
              id="name-first.last3"
              placement="top"
            >
              first.last3
            </Tooltip>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <OverlayTrigger
            animation={true}
            defaultOverlayShown={false}
            delayShow={500}
            onEntered={[Function]}
            overlay={
              <OverlayWrapper
                bsClass="tooltip"
                className="hidden-xs"
                id="name-first.last3"
                intl={
                  Object {
                    "defaultFormats": Object {},
                    "defaultLocale": "en",
                    "formatDate": [Function],
                    "formatDateToParts": [Function],
                    "formatDisplayName": [Function],
                    "formatList": [Function],
                    "formatMessage": [Function],
                    "formatNumber": [Function],
                    "formatNumberToParts": [Function],
                    "formatPlural": [Function],
                    "formatRelativeTime": [Function],
                    "formatTime": [Function],
                    "formatTimeToParts": [Function],
                    "formats": Object {},
                    "formatters": Object {
                      "getDateTimeFormat": [Function],
                      "getDisplayNames": [Function],
                      "getListFormat": [Function],
                      "getMessageFormat": [Function],
                      "getNumberFormat": [Function],
                      "getPluralRules": [Function],
                      "getRelativeTimeFormat": [Function],
                    },
                    "locale": "en",
                    "messages": Object {},
                    "onError": [Function],
                    "textComponent": "span",
                    "timeZone": "Etc/UTC",
                    "wrapRichTextChunksInFragment": undefined,
                  }
                }
                placement="top"
              >
                first.last3
              </OverlayWrapper>
            }
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <Memo(Avatar)
              onBlur={[Function]}
              onClick={null}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              size="xl"
              tabIndex={0}
              url="/api/v4/users/3/image?_=0"
            >
              <img
                alt="user profile image"
                className="Avatar Avatar-xl"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                src="/api/v4/users/3/image?_=0"
                tabIndex={0}
              />
            </Memo(Avatar)>
          </OverlayTrigger>
        </OverlayTrigger>
      </SimpleTooltip>
    </UserAvatar>
  </div>
</Memo(Avatars)>
`;
